A nice background image

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<html>
+<head>
+<style>
+body {
+  background-image: url("images/choi-hong-estate.jpg");
+  background-size: cover;
+}
+</style>
+</head>
+<body>
+
+</body>
+</html>
